--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <version>1.4.197</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1200-jdbc41</version>
+        </dependency>
+
+        
         <!--
         <dependency>
             <groupId>javax.xml.bind</groupId>
