переход на постгрес - диалект

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,25 @@ server.port=8080
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
+
+#spring.datasource.url=jdbc:postgresql://localhost/passcontrol
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 -- spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans: true
