--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>1.5.9.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>1.5.9.RELEASE</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -61,7 +68,7 @@
             <version>9.4-1200-jdbc41</version>
         </dependency>
 
-        
+
         <!--
         <dependency>
             <groupId>javax.xml.bind</groupId>
