--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 -- spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans: true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer: allow
-
 
