--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans: true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer: allow
 
+spring.datasource.data=data.sql
+spring.datasource.initialization-mode=never
