--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,18 +6,18 @@ server.port=8080
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-
-
-spring.datasource.url=jdbc:postgresql://localhost/passcontrol
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
+
+#spring.datasource.url=jdbc:postgresql://localhost/passcontrol
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
