--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.4</version>
+        </dependency>
 
     </dependencies>
 
