--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,11 +20,17 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 -- spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans: true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer: allow
 
-spring.datasource.data=classpath:/data.sql
-spring.datasource.initialization-mode=always
+--spring.datasource.data=classpath:/data.sql
+--spring.datasource.initialization-mode=always
+
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
+
+flyway.baselineOnMigrate = true
+
